--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<li><a href="https://github.com/avemetcalf" target="_blank" rel="noopener noreferrer">Github</a></li>
 				<li><a href="https://www.linkedin.com/in/avery-metcalf/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
 				<li><a href="article.html">Monthly Articles</a></li>
+				<li><a href="resume.html">Resume</a></li>
 			<!--	<li><a href="#">Contact</a></li> -->
 			</ul>
 			<!-- <a href="#" class="btn">Subscribe</a> -->
@@ -99,12 +100,12 @@
 		</div>
 	</div>
 
-	<!------Contact Me----
+	<!-- ---Contact Me---->
 	<div class="contact-me">
 		<p>Let Me Get You A Beautiful Website.</p>
 		<p>Coming Soon</p>
 		<a class="button-two" href="#">Hire Me</a>
-	</div> -->
+	</div>
 
 	<!------footer start--------->
 	<footer>
