--- a/article.html
+++ b/article.html
@@ -19,7 +19,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="https://github.com/avemetcalf" target="_blank" rel="noopener noreferrer">Github</a></li>
 				<li><a href="https://www.linkedin.com/in/avery-metcalf/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-				<li><a href="article.html">Monthly Articles</a></li>
+				<li><a href="article.html">Monthly Tech Video</a></li>
 				<li><a href="resume.html">Resume</a></li>
 			<!--	<li><a href="#">Contact</a></li> -->
 			</ul>
@@ -40,12 +40,23 @@
 	</div>
 
     <!-- Podcast -->
-    <div class = "about">
-      <h4> Podcast </h4>
+    <section class = "about">
+			<h1> Monthly Podcast Pick</h1>
+			<div class = "main">
+			<!--Podcast Youtube Link-->
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/I845O57ZSy4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
+			<!--Section for discription about pod and why you enjoyed -->
+			<div class="about-text">
+				<h3><span>August 2022: </span>Lex Fridman Pod #309 with John Carmack</h3>
+				<p>
+					This is a podcast by Lex Fridman, who is one of my favorite podcasters right now. He is speaking with John Carmack who is the co-founder of the company id Software which is an american video game developer company. He is the lead programmer in some popular games such as Doom, Quake, Wolfenstein 3D, and the Commander Keen series. I enjoyed listening to this podcast because there is a lot of good knowledge about different aspects of programming from one of the best programmers in the world. He makes a lot of interesting points throughout the podcast that are enjoyable to people interested in his work.
+				</p>
+			</div>
 
-    </div>
+		</div>
+    </section>
 
 
 
