--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="https://github.com/avemetcalf" target="_blank" rel="noopener noreferrer">Github</a></li>
 				<li><a href="https://www.linkedin.com/in/avery-metcalf/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-				<li><a href="article.html">Monthly Articles</a></li>
+				<li><a href="article.html">Monthly Tech Video</a></li>
 				<li><a href="resume.html">Resume</a></li>
 			<!--	<li><a href="#">Contact</a></li> -->
 			</ul>
