new background, navigation tabs

--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
       </nav>
 
       <div class = "container">
-          <embed src="files/Resume.pdf" type="application/pdf" width="95%" height="550px" />
+          <embed src="files/Avery-Resume-2022.pdf" type="application/pdf" width="95%" height="550px" />
 
       </div>
 
