--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 			<h3>I am a Software Developer/ <span> Web Developer</span></h3>
 			<div class="newslatter">
 				<form>
-					<input type="email" name="email" id="mail" placeholder="Enter your email here">
-					<input type="submit" name="submit" value="Lets Start">
+				<!---	<input type="email" name="email" id="mail" placeholder="Enter your email here"> -->
+					<input type="submit" name="submit" value="averymetcalf02@gmail.com">
 				</form>
 			</div>
 		</div>
@@ -49,7 +49,7 @@
 				<h5>Developer <span>& Designer</span></h5>
 				<p>I am a Software Developer with basic knowledge in languages Python, Java, and C++. I graduated from the University of North Carolina at Charlotte with a degree in computer science. I also have knowledge in Web Development with HTML and CSS. This website was created by me and will be representing any projects that I am or have worked on. There is also an article section that will be updated monthly with a few my favorite tech related articles at the time.
 				</p>
-				<button type="button">Let's Talk</button>
+				
 			</div>
 		</div>
 	</section>
@@ -65,12 +65,10 @@
 				<i class="fas fa-bars"></i>
 				<h5>Web Development</h5>
 				<div class="pra">
-					<p>  Bring the vision of your dream website to life. (Coming 2023)
-					</p>
-
-					<p style="text-align: center;">
+					<p> </p>
+				<!--	<p style="text-align: center;">
 						<a class="button" href="#">Read More</a>
-					</p>
+					</p> -->
 				</div>
 			</div>
 
@@ -78,23 +76,23 @@
 				<i class="far fa-user"></i>
 				<h5>Web Development</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-
-					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
-					</p>
+					<p></p>
+				<!--	<p style="text-align: center;">
+						<a class="button" href="#">Read More</a> 
+					</p> -->
 				</div>
 			</div>
 
 			<div class="card">
 				<i class="far fa-bell"></i>
-				<h5>Web Development</h5>
+				<h5>Software Development</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-
-					<p style="text-align: center;">
+					<p> Java </p>
+					<p> C++ </p>
+					<p> Python </p>
+				<!--	<p style="text-align: center;">
 						<a class="button" href="#">Read More</a>
-					</p>
+					</p> -->
 				</div>
 			</div>
 		</div>
