--- a/index.html
+++ b/index.html
@@ -63,20 +63,21 @@
 		<div class="box">
 			<div class="card">
 				<i class="fas fa-bars"></i>
-				<h5>Web Development</h5>
+				<h5> RESUME </h5>
 				<div class="pra">
 					<p> </p>
-				<!--	<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
-					</p> -->
+					<p style="text-align: center;">
+						<a class="button" href="resume.html">Read More</a>
+					</p> 
 				</div>
-			</div>
+			</div> 
 
 			<div class="card">
 				<i class="far fa-user"></i>
 				<h5>Web Development</h5>
 				<div class="pra">
-					<p></p>
+					<p> HTML </p>
+					<P> CSS </P>
 				<!--	<p style="text-align: center;">
 						<a class="button" href="#">Read More</a> 
 					</p> -->
@@ -98,10 +99,12 @@
 		</div>
 	</div>
 
-	<!-- ---Contact Me---->
+	 <!-- Qoute -->
 	<div class="contact-me">
-		<p>Let Me Get You A Beautiful Website.</p>
-		<p>Coming Soon</p>
+		<p>Steve Jobs</p>
+		<p>"It’s technology married with liberal arts,</p>
+		<p>married with the humanities, that yields</p>
+		<p>the results that make our hearts sing"</p>
 		<a class="button-two" href="#">Hire Me</a>
 	</div>
 
